shelf: Keep shelf visible if failed to drag up app list from it.

Bug: 882063
Change-Id: Id49140eb4e16fe2bef1e337cb67a5cf7cc8867d5
Reviewed-on: https://chromium-review.googlesource.com/c/1377169
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#616490}
Former-commit-id: 3328547d33e24a9cb7f2e941f58fcf4f84b1f1a4